syntax = "proto3";

package com.ridiculands.grocery.stubs.user;

option java_package = "com.ridiculands.grocery.stubs.user";
option java_multiple_files = true;

service UserService {
  rpc getUserDetails(UserRequest) returns (UserResponse);
}

message UserRequest {
  string userName = 1;
}

message UserResponse {
  int32 id = 1;
  string userName = 2;
  string name = 3;
  MemberType memberType = 4;
}

enum MemberType {
  SILVER = 0;
  GOLD = 1;
  PLATINUM = 2;
}
